Fixes #18158: ensure that long columns wrap on small screens.
http://projects.theforeman.org/issues/18158

--- a/app/assets/stylesheets/bastion/tables.scss
+++ b/app/assets/stylesheets/bastion/tables.scss
@@ -9,6 +9,10 @@
     text-align: center;
   }
 
+  td, th {
+    word-wrap: break-word;
+  }
+
   tr.clickable-row,
   th.sortable {
     cursor: pointer;
